// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse parse media 1`] = `
"font-size: 12px;
padding: 4px;
height: 100px;
@media screen and (max-width: 80em) {
  font-size: 13px;
  padding: 8px;
}
@media screen and (max-width: 93em) {
  font-size: 14px;
  padding: 16px;
}
@media screen and (max-width: 120em) {
  font-size: 15px;
  padding: 8px;
}
&:focus {
  border-width: 1px;
  background-color: #009688;
  color: #fff;
}"
`;

exports[`parse parse stand 1`] = `
"padding: 4px;
height: 100px;
&:focus {
  padding: 8px;
  height: 200px;
}"
`;

exports[`parseJSS parse media 1`] = `
"font-size: 12px;
padding: 4px;
height: 100px;
@media screen and (max-width: 80em) {
  font-size: 13px;
  padding: 8px;
}
@media screen and (max-width: 93em) {
  font-size: 14px;
  padding: 16px;
}
@media screen and (max-width: 120em) {
  font-size: 15px;
  padding-top: 16px;
}
&:focus {
  border-width: 1px;
  background-color: #009688;
  color: #fff;
}"
`;

exports[`parseJSS parse stand 1`] = `
"padding: 4px;
height: 100px;
&:focus {
  padding: 8px;
  height: 200px;
}"
`;
